--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,3 +1,58 @@
+/* Box model * */
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+/* Reset styles */
+/* h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  font-family: inherit;
+  color: currentColor;
+  text-decoration: none;
+}
+
+button {
+  display: block;
+  padding: 0;
+
+  font-family: inherit;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+
+}
+
+*::before,
+*::after {
+  display: block;
+} */
+
 /* Reset styles */
 h1,
 h2,
@@ -7,6 +62,7 @@ h5,
 h6,
 p {
   margin: 0;
+  padding: 0;
 }
 
 p:last-child {
