--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,14 +5,48 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
 
+/* ------------FONTS------------ */
+
+/* dm-sans-regular - latin */
+@font-face {
+  font-display: swap;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/dm-sans-v14-latin-regular.woff2') format('woff2'),
+    url('../fonts/dm-sans-v14-latin-regular.ttf') format('truetype');
+}
+
+/* dm-sans-italic - latin */
+@font-face {
+  font-display: swap;
+  font-family: 'DM Sans';
+  font-style: italic;
+  font-weight: 400;
+  src: url('../fonts/dm-sans-v14-latin-italic.woff2') format('woff2'),
+    url('../fonts/dm-sans-v14-latin-italic.ttf') format('truetype');
+}
+
+/* dm-sans-500 - latin */
+@font-face {
+  font-display: swap;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 500;
+  src: url('../fonts/dm-sans-v14-latin-500.woff2') format('woff2'),
+    url('../fonts/dm-sans-v14-latin-500.ttf') format('truetype');
+}
+
+/* Variables*/
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  /* color */
+
+  font-family: 'DM Sans';
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
+  font-style: normal;
 
   color: #242424;
   background-color: rgba(255, 255, 255, 0.87);
@@ -22,4 +56,64 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  /* --iris: #4d5ae5; */
+
+  /* Text */
+  /* --font-main: 'Roboto', sans-serif; */
+
+  /* Transition*/
+  --anim-modal: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  /* Adaptive */
+
+  --count-advanteges: 4;
+}
+
+/* html {
+  scroll-behavior: smooth;
+} */
+
+/* ------------BASE STYLES------------ */
+
+.section {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+/* Visually-hidden*/
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
+
+/* ------------CONTAINER------------ */
+
+.container {
+  max-width: 375px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    max-width: 1440px;
+  }
 }
