--- a/src/partials/modal-menu.html
+++ b/src/partials/modal-menu.html
@@ -1,4 +1,4 @@
-<div class="backdrop-menu-modal container" data-modal>
+<div class="backdrop-menu-modal container is-hidden">
   <div class="menu-modal">
     <!-- Modal Header -->
     <div class="menu-modal-header">
@@ -6,28 +6,33 @@
       <a class="modal-menu-logo" href="./index.html">energy.flow</a>
 
       <!-- Button CLOSE -->
-      <button class="menu-modal-close-button" type="button" data-modal-close>
+      <button class="menu-modal-close-button" type="button">
         <svg
-          class="exercises-modal-close-icon"
+          class="menu-modal-close-icon"
           fill="#212121"
-          width="24"
-          height="24"
+          width="20"
+          height="20"
         >
-          <use href="./img/sprite.svg#icon-x"></use>
+          <use href="./img/sprite.svg#icon-x-big-white"></use>
         </svg>
       </button>
     </div>
 
-    <!-- Middle Button -->
+    <!-- Middle Buttons -->
     <div>
-      <div class="exercises-modal-buttons">
-        <button class="exercises-modal-button-favorites" type="button">
+      <div class="modal-menu-buttons">
+        <button
+          class="modal-menu-button-home"
+          type="button"
+          onclick="window.location.href = './index.html'"
+        >
           Home
-          <svg class="exercises-modal-button-icon">
-            <use href="./img/sprite.svg#icon-heart"></use>
-          </svg>
         </button>
-        <button class="exercises-modal-button-rating" type="button">
+        <button
+          class="modal-menu-button-favorites"
+          type="button"
+          onclick="window.location.href = './favorites.html'"
+        >
           Favorites
         </button>
       </div>
@@ -37,35 +42,35 @@
 
     <div class="modal-menu-socials-wrap">
       <ul class="modal-menu-socials-list">
-        <li class="footer-socials-item">
+        <li class="modal-menu-socials-item">
           <a
-            class="footer-socials-linc"
+            class="modal-menu-socials-linc"
             href="https://www.facebook.com/goITclub"
             target="_blank"
           >
-            <svg class="footer-socials-svg" width="20" height="20">
+            <svg class="modal-menu-socials-svg" width="20" height="20">
               <use href="./img/sprite.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
-        <li class="footer-socials-item">
+        <li class="modal-menu-socials-item">
           <a
-            class="footer-socials-linc"
+            class="modal-menu-socials-linc"
             href="https://www.instagram.com/goitclub"
             target="_blank"
           >
-            <svg class="footer-socials-svg" width="20" height="20">
+            <svg class="modal-menu-socials-svg" width="20" height="20">
               <use href="./img/sprite.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
-        <li class="footer-socials-item">
+        <li class="modal-menu-socials-item">
           <a
-            class="footer-socials-linc"
+            class="modal-menu-socials-linc"
             href="https://www.youtube.com/c/GoIT"
             target="_blank"
           >
-            <svg class="footer-socials-svg" width="20" height="20">
+            <svg class="modal-menu-socials-svg" width="20" height="20">
               <use href="./img/sprite.svg#icon-youtube"></use>
             </svg>
           </a>
