--- a/src/css/favorites.css
+++ b/src/css/favorites.css
@@ -5,47 +5,15 @@
   |============================
 */
 @import url('./reset.css');
+@import url('./fonts.css');
+@import url('./header.css');
+@import url('./qote-day.css');
 @import url('./modal-menu.css');
 @import url('./arrow-button.css');
 
-/* ------------FONTS------------ */
-
-/* dm-sans-regular - latin */
-@font-face {
-  font-display: swap;
-  font-family: 'DM Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../fonts/dm-sans-v14-latin-regular.woff2') format('woff2'),
-    url('../fonts/dm-sans-v14-latin-regular.ttf') format('truetype');
-}
-
-/* dm-sans-italic - latin */
-@font-face {
-  font-display: swap;
-  font-family: 'DM Sans';
-  font-style: italic;
-  font-weight: 400;
-  src: url('../fonts/dm-sans-v14-latin-italic.woff2') format('woff2'),
-    url('../fonts/dm-sans-v14-latin-italic.ttf') format('truetype');
-}
-
-/* dm-sans-500 - latin */
-@font-face {
-  font-display: swap;
-  font-family: 'DM Sans';
-  font-style: normal;
-  font-weight: 500;
-  src: url('../fonts/dm-sans-v14-latin-500.woff2') format('woff2'),
-    url('../fonts/dm-sans-v14-latin-500.ttf') format('truetype');
-}
-
 :root {
   font-family: 'DM Sans';
-  font-size: 16px;
   line-height: 24px;
-  font-weight: 400;
-  font-style: normal;
 
   --primary-white-color: #f6f6f6;
   --primary-white-color-bg-icon: rgba(246, 246, 246, 0.1);
@@ -63,12 +31,6 @@
   --main-black-gray-text: rgba(27, 27, 27, 0.5);
   --main-black-modal: rgba(27, 27, 27, 0.6);
   --yellow-star: #eea10c;
-
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
-
-  /* color: #1b1b1b;
-  background-color: #f6f6f6; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -116,13 +78,13 @@
 /* ------------BASE STYLES------------ */
 
 body {
-  color: #1b1b1b;
-  background-color: #f6f6f6;
+  color: var(--main-black-color);
+  background-color: var(--primary-white-color);
 }
 
 /* ----------------HEADER--------------- */
 
-.header {
+.header-favorites {
   padding-top: 29px;
   padding-bottom: 27px;
 
@@ -131,27 +93,22 @@ body {
 }
 
 @media screen and (min-width: 768px) {
-  .header {
+  .header-favorites {
     padding-top: 48px;
     padding-bottom: 80px;
   }
 }
 
 @media screen and (min-width: 1440px) {
-  .header {
+  .header-favorites {
     padding-top: 28px;
     padding-bottom: 64px;
   }
 }
 
 .header-container {
-  display: flex;
-  align-items: center;
   padding-left: 40px;
   padding-right: 40px;
-
-  outline: 1px solid red;
-  outline-offset: -2px;
 }
 
 @media screen and (min-width: 768px) {
@@ -169,163 +126,10 @@ body {
   }
 }
 
-.header-nav {
-  display: flex;
-  align-items: center;
-
-  outline: 1px solid red;
-  outline-offset: -2px;
-}
-
-@media screen and (min-width: 1440px) {
-  .header-nav {
-    align-self: flex-end;
-  }
-}
-
-.header-logo {
-  font-weight: 700;
-  line-height: 1.12;
-  letter-spacing: -0.02em;
-  color: #1b1b1b;
-
-  outline: 1px solid red;
-  outline-offset: -2px;
-}
-
-@media screen and (min-width: 768px) {
-  .header-logo {
-    width: 150px;
-
-    font-size: 28px;
-    line-height: 1;
-
-    margin-right: 76px;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .header-logo {
-    margin-right: 397px;
-  }
-}
-
-.header-nav-list {
-  display: none;
-
-  outline: 1px solid red;
-  outline-offset: -2px;
-}
-
-@media screen and (min-width: 768px) {
-  .header-nav-list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 8px 28px 8px 12px;
-    border-radius: 30px;
-    background-color: #7e847f;
-  }
-}
-
-.header-nav-item {
-  padding: 6px 16px;
-  border-radius: 30px;
-  color: #f6f6f6;
-  background-color: transparent;
-
-  outline: 1px solid red;
-  outline-offset: -2px;
-}
-
-.header-nav-item.active {
-  padding: 6px 14px;
-
-  color: #1b1b1b;
-  background-color: #fff;
-}
-
-.header-nav-link {
-  line-height: 1.5;
-}
-
-.header-social-list {
-  display: none;
-
-  outline: 1px solid red;
-  outline-offset: -2px;
-}
-
-@media screen and (min-width: 768px) {
-  .header-social-list {
-    display: flex;
-    gap: 12px;
-
-    margin-left: auto;
-  }
-}
-
 @media screen and (min-width: 1440px) {
   .header-social-list {
     align-self: flex-start;
   }
-}
-
-.header-social-item {
-  width: 44px;
-  height: 44px;
-}
-.header-social-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-
-  color: #7e847f;
-  border: 1px solid rgba(126, 132, 127, 0.2);
-  border-radius: 10px;
-  padding: 8px;
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-social-link:hover,
-.header-social-link:focus {
-  color: #5f6560;
-}
-
-.social-icon {
-  fill: currentColor;
-}
-
-/* -------HEADER MOBILE-MENU-BTN------- */
-
-.mobile-menu-btn {
-  padding: 0;
-  margin-left: auto;
-
-  min-height: 40px;
-  min-width: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  border: none;
-  background-color: transparent;
-
-  outline: 1px solid red;
-  outline-offset: -2px;
-}
-
-@media screen and (min-width: 768px) {
-  .mobile-menu-btn {
-    display: none;
-  }
-}
-
-.mobile-menu-icon {
-  stroke: #7e847f;
 }
 
 /* ----------------INFO--------------- */
@@ -348,86 +152,7 @@ body {
   }
 }
 
-/* -------------info-quote------------- */
-
-.info-quote {
-  position: relative;
-  height: 272px;
-  border-radius: 30px;
-  background-color: #7e847f;
-}
-
-@media screen and (min-width: 768px) {
-  .info-quote {
-    width: 736px;
-    height: 302px;
-    border-radius: 50px;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .info-quote {
-    width: 704px;
-    height: 302px;
-  }
-}
-
-.info-quote {
-  padding: 42px 20px 40px 66px;
-}
-
-@media screen and (min-width: 768px) {
-  .info-quote {
-    padding: 64px 80px 64px 130px;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .info-quote {
-    padding: 64px 64px 64px 114px;
-  }
-}
-
-.info-quote-title {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.4;
-  color: #f6f6f6;
-
-  margin-bottom: 14px;
-}
-
-@media screen and (min-width: 768px) {
-  .info-quote-title {
-    font-size: 24px;
-    line-height: 1.33;
-
-    margin-bottom: 16px;
-  }
-}
-
-.info-quote-cont {
-  font-size: 14px;
-  line-height: 1.29;
-  color: rgba(246, 246, 246, 0.6);
-
-  margin-bottom: 14px;
-}
-
-@media screen and (min-width: 768px) {
-  .info-quote-cont {
-    font-size: 16px;
-    line-height: 1.5;
-
-    margin-bottom: 25px;
-  }
-}
-
-.info-quote-author {
-  font-weight: 500;
-  line-height: 1.5;
-  color: #f6f6f6;
-}
+/* -------------info-quote import------------- */
 
 /* -------------info-img------------- */
 
@@ -535,71 +260,6 @@ body {
   font-size: 14px;
   line-height: 1.29;
   color: rgba(27, 27, 27, 0.6);
-}
-
-/* -------------info-icon------------- */
-
-.info-icon-wrap {
-  position: absolute;
-  top: 40px;
-  left: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  width: 32px;
-  height: 32px;
-  background-color: rgba(246, 246, 246, 0.1);
-  border-radius: 50%;
-}
-
-@media screen and (min-width: 768px) {
-  .info-icon-wrap {
-    top: 64px;
-    left: 80px;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .info-icon-wrap {
-    top: 64px;
-    left: 64px;
-  }
-}
-
-.info-icon-item {
-}
-
-.info-marks-wrap {
-  position: absolute;
-  top: 40px;
-  right: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  width: 28px;
-  height: 28px;
-}
-
-@media screen and (min-width: 768px) {
-  .info-marks-wrap {
-    top: 32px;
-    right: 80px;
-
-    width: 48px;
-    height: 48px;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .info-marks-wrap {
-    top: 32px;
-    right: 64px;
-  }
-}
-
-.info-marks-item {
 }
 
 /* --------------SECTION FAVORITES------------ */
