--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -9,51 +9,6 @@ html {
 }
 
 /* Reset styles */
-/* h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 0;
-}
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-a {
-  font-family: inherit;
-  color: currentColor;
-  text-decoration: none;
-}
-
-button {
-  display: block;
-  padding: 0;
-
-  font-family: inherit;
-  cursor: pointer;
-  border: none;
-  outline: none;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-
-}
-
-*::before,
-*::after {
-  display: block;
-} */
-
-/* Reset styles */
 h1,
 h2,
 h3,
@@ -65,27 +20,38 @@ p {
   padding: 0;
 }
 
-p:last-child {
-  margin-bottom: 0;
-}
-
-ul {
+ul,
+ol {
+  list-style: none;
   margin: 0;
   padding: 0;
-  list-style: none;
 }
 
 a {
-  color: currentColor;
   text-decoration: none;
+  color: currentColor;
+  font-family: inherit;
+  display: block;
 }
 
 button {
+  display: block;
+  padding: 0;
+
+  font-family: inherit;
   cursor: pointer;
+  border: none;
+  outline: none;
+  background-color: transparent;
 }
 
 img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+*::before,
+*::after {
+  display: block;
 }
