--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,115 +5,113 @@
   |============================
 */
 @import url('./reset.css');
+@import url('./fonts.css');
+@import url('./header.css');
+@import url('./hero.css');
+@import url(./qote-day.css);
+@import url(./quote.css);
+@import url(./exercises.css);
+@import url('./modal-menu.css');
+@import url('./arrow-button.css');
 
-/* ------------FONTS------------ */
-
-/* dm-sans-regular - latin */
-@font-face {
-  font-display: swap;
-  font-family: 'DM Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: url('../fonts/dm-sans-v14-latin-regular.woff2') format('woff2'),
-    url('../fonts/dm-sans-v14-latin-regular.ttf') format('truetype');
-}
-
-/* dm-sans-italic - latin */
-@font-face {
-  font-display: swap;
-  font-family: 'DM Sans';
-  font-style: italic;
-  font-weight: 400;
-  src: url('../fonts/dm-sans-v14-latin-italic.woff2') format('woff2'),
-    url('../fonts/dm-sans-v14-latin-italic.ttf') format('truetype');
-}
-
-/* dm-sans-500 - latin */
-@font-face {
-  font-display: swap;
-  font-family: 'DM Sans';
-  font-style: normal;
-  font-weight: 500;
-  src: url('../fonts/dm-sans-v14-latin-500.woff2') format('woff2'),
-    url('../fonts/dm-sans-v14-latin-500.ttf') format('truetype');
-}
-
-/* Variables*/
 :root {
-  /* color */
+  --white-color: #fff;
+  --main-black-color: #1b1b1b;
+  --primary-white-color: #f6f6f6;
+  --primary-white-color-filter-text: rgba(246, 246, 246, 0.4);
 
-  font-family: 'DM Sans';
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-  font-style: normal;
+  --primary-white-color-bg-icon: rgba(246, 246, 246, 0.1);
+  --primary-white-color-footer-stroke: rgba(246, 246, 246, 0.2);
+  --primary-white-color-footer-text: rgba(246, 246, 246, 0.3);
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+  --primary-white-color-secondary-text: rgba(246, 246, 246, 0.6);
+
+  --dark-gray-color: #7e847f;
+  --dark-gray-color-stroke: rgba(126, 132, 127, 0.2);
+  --light-gray-color: #e8e8e8;
+
+  --main-black-modal-elements: rgba(27, 27, 27, 0.2);
+  --main-black-color-disable: rgba(27, 27, 27, 0.4);
+  --main-black-gray-text: rgba(27, 27, 27, 0.5);
+  --main-black-modal: rgba(27, 27, 27, 0.6);
+  --yellow-star: #eea10c;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-
-  /* --iris: #4d5ae5; */
-
-  /* Text */
-  /* --font-main: 'Roboto', sans-serif; */
-
-  /* Transition*/
-  --anim-modal: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  /* Adaptive */
-
-  --count-advanteges: 4;
 }
 
-/* html {
-  scroll-behavior: smooth;
-} */
-
-/* ------------BASE STYLES------------ */
-
-.section {
-  padding-top: 96px;
-  padding-bottom: 96px;
-}
-
-/* Visually-hidden*/
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  border: 0;
-  clip: rect(0 0 0 0);
-}
-
-/* ------------CONTAINER------------ */
+/* -----------CONTAINER------------ */
 
 .container {
-  max-width: 375px;
-  padding-left: 20px;
-  padding-right: 20px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
+
+  outline: 1px solid red;
+  outline-offset: -2px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 320px) and (max-width: 767.98px) {
+  .container {
+    max-width: 375px;
+    padding: 0 20px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1439.98px) {
   .container {
     max-width: 768px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding: 0 15px;
   }
+
+  /* .section {
+    padding: 16px 0;
+  } */
 }
 
 @media screen and (min-width: 1440px) {
   .container {
     max-width: 1440px;
+    padding: 0 16px;
+  }
+}
+
+/* ------------BASE STYLES------------ */
+
+body {
+  font-family: 'DM Sans';
+  font-weight: 400;
+  color: var(--main-black-color);
+  background-color: var(--primary-white-color);
+}
+
+.section {
+  outline: 1px solid red;
+  outline-offset: -1px;
+
+  padding-bottom: 20px;
+}
+
+/* ------------HEADER------------ */
+
+.header-container {
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .header-container {
+    padding-left: 48px;
+    padding-right: 48px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .header-container {
+    padding-left: 64px;
+    padding-right: 64px;
   }
 }
