--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,49 @@
 <header class="header">
-  <h2>header section</h2>
-  <a href="./favorites.html">Favorites</a>
+  <div class="header-container container">
+    <nav class="header-nav">
+      <a class="header-logo" href="./index.html">energy.flow</a>
+      <ul class="header-nav-list">
+        <li class="header-nav-item">
+          <a class="header-nav-link" href="./index.html">Home</a>
+        </li>
+        <li class="header-nav-item active">
+          <a class="header-nav-link" href="./favorites.html">Favorites</a>
+        </li>
+      </ul>
+    </nav>
+    <ul class="header-social-list">
+      <li class="header-social-item">
+        <a class="header-social-link" href="https://www.facebook.com/goITclub/" rel="noopener noreferrer nofollow"
+          target="_blank" aria-label="facebook">
+          <svg class="social-icon" width="28" height="28">
+            <use href="./img/sprite.svg#icon-facebook"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="header-social-item">
+        <a class="header-social-link" href="https://www.instagram.com/goitclub/" rel="noopener noreferrer nofollow"
+          target="_blank" aria-label="instagram">
+          <svg class="social-icon" width="28" height="28">
+            <use href="./img/sprite.svg#icon-instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="header-social-item">
+        <a class="header-social-link" href="https://www.youtube.com/c/GoIT" rel="noopener noreferrer nofollow"
+          target="_blank" aria-label="youtube">
+          <svg class="social-icon" width="28" height="28">
+            <use href="./img/sprite.svg#icon-youtube"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+
+    <!-- Button mobile-menu -->
+    <button class="mobile-menu-btn button-header" data-modal-open type="button">
+      <svg class="mobile-menu-icon" width="32" height="16">
+        <use href="./img/sprite.svg#icon-burger"></use>
+      </svg>
+    </button>
+  </div>
+
 </header>
